--- a/package.json
+++ b/package.json
@@ -12,11 +12,12 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/geolocation": "^2.0.2",
+    "@react-native-firebase/app": "^12.9.0",
+    "@react-native-firebase/firestore": "^12.9.1",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
-    "firebase": "^9.0.0",
     "react": "17.0.1",
     "react-native": "0.64.1",
     "react-native-dotenv": "^3.2.0",
