--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@react-native-async-storage/async-storage": "^1.15.7",
     "@react-native-community/geolocation": "^2.0.2",
     "@react-native-firebase/app": "^12.9.0",
+    "@react-native-firebase/auth": "^12.9.1",
     "@react-native-firebase/firestore": "^12.9.1",
+    "@react-native-firebase/storage": "^12.9.1",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
@@ -23,6 +25,7 @@
     "react-native-dotenv": "^3.2.0",
     "react-native-geocoding": "^0.5.0",
     "react-native-gesture-handler": "^1.10.3",
+    "react-native-image-picker": "^4.1.1",
     "react-native-maps": "0.28.0",
     "react-native-reanimated": "^2.2.2",
     "react-native-safe-area-context": "^3.3.0",
