--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-native-firebase/auth": "^12.9.1",
     "@react-native-firebase/firestore": "^12.9.1",
     "@react-native-firebase/storage": "^12.9.1",
+    "@react-native-google-signin/google-signin": "^7.0.1",
     "@react-navigation/bottom-tabs": "^6.0.3",
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
