--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     "@react-navigation/drawer": "^6.1.4",
     "@react-navigation/native": "^6.0.2",
     "@react-navigation/stack": "^6.0.4",
+    "moment": "^2.29.1",
     "react": "17.0.1",
+    "react-moment": "^1.1.1",
     "react-native": "0.64.1",
     "react-native-dotenv": "^3.2.0",
     "react-native-geocoding": "^0.5.0",
